@startuml
!theme plain

title Diagrama de Clases - Módulo Notificaciones

class Notificacion {
    +id: Integer
    +titulo: CharField
    +mensaje: TextField
    +leida: BooleanField
    +leida_en: DateTimeField
    +created_at: DateTimeField
    +updated_at: DateTimeField
}

class User {
    +id: Integer
    +username: CharField
    +email: EmailField
    +password: CharField
}

class Record {
    +id: Integer
    +first_name: CharField
    +last_name: CharField
    +email: EmailField
    +phone: CharField
}

User "1" --> "0..*" Notificacion : tiene >
Notificacion --> User : pertenece a >

note right of Notificacion
  - Validaciones con RE: título y mensaje
  - Estado leida/no_leida
  - Ordenado por created_at descendente
  - Roles: admin, organizador, residente
end note

@enduml